@@ -2,13 +2,14 @@ V4.0.2 (in progress)
 [BUG] : Corrected bugs : 269, 270, 486, 497 (see http://www.automne.ws/bug/)
 [BUG] : Remove ghost groups on templates
 [BUG] : Templates do a better check on usage
-[BUG] : In ISO, uploaded files with accentuated caracters are not correctly handled
 [REFACTOR] : Add draft thumbnail on page status icons
 [REFACTOR] : Update phpMyAdmin to version 3.3.1
 [REFACTOR] : Update ExtJS to version 3.2.0
 [REFACTOR] : Add pages redirection infos in pages tree
 [FEATURE] : Add tabs menu on all tabs panels
-[FEATURE] : Add cache management to all polymod blocks, plugins and rss
+[FEATURE] : Add labels and ids varaibles to object categories when using multi categories
+[FEATURE] : Add cache management to all polymod blocks, plugins and rss. Add parameter cache on block tag and tag atm-cache-reference to handle this.
+[FEATURE] : Add tags atm-admin, atm-noadmin, atm-edit, atm-noedit
 
 V4.0.1 (19/03/10)
 [BUG] : Corrected bugs : 399, 401, 286, 265, 268, 283, 284, 302, 282, 280, 296, 304 (see http://www.automne.ws/bug/)
